# reska-op-card-api

./: .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_naip_is_foil.py  0003_print_variant.py  0004_set_parent_fk.py  0005_language_images.py  0006_add_missing_indexes.py  0007_fix_naip_junction_fk.py  0008_api_keys.py  0009_api_key_usage.py  0010_api_key_label_required_unique.py  0011_api_key_log.py  0012_api_key_soft_delete.py  0013_api_key_label_unique_active_only.py  0014_api_key_log_cascade.py  0015_api_key_rename_deleted_ts.py  0016_restore_naip_junction_indexes.py  681d524342bf_add_image_path_to_naip.py  8a5145c40a8a_initial.py  a1b2c3d4e5f6_drop_card_trigger_junction.py  a1b2c3d4e5f7_add_naip_is_errata.py  a22f8db88250_add_image_path_to_card.py  b1c2d3e4f5a6_add_timestamps_to_remaining_tables.py  b2c3d4e5f6a7_redesign_effect_trigger_as_lookup.py  b2c3d4e5f6a8_add_set_series_ord.py  b5c6d7e8f9a0_language_region_system.py  c1d2e3f4a5b6_fix_ts_columns_date_to_datetime.py  c3d4e5f6a7b8_normalize_trigger_effect_to_junctions.py  c3f8a1d92e74_rename_naip_desc_to_effect_and_add_naip_.py  d2e3f4a5b6c7_backfill_ts_date_only_to_datetime.py  d4e5f6a7b8c9_naip_effect_trigger_as_direct_fk.py  d5e6f7a8b9c0_add_constraints_and_indexes.py  e1a2b3c4d5e6_rename_tables_to_snake_case.py  e3f4a5b6c7d8_rename_junction_tables_add_constraints.py  e5f6a7b8c9d0_normalize_name_image_card_text.py  f1a2b3c4d5e6_add_set_code_unique_naip_default_index.py  f3a9b2c1d4e5_add_cardeffect_cardtrigger_tables.py  f6a7b8c9d0e1_add_timestamps_to_all_tables.py  g1h2i3j4k5l6_add_naip_sort_order.py  h2i3j4k5l6m7_db_side_timestamps.py
doc/: ER.dia  MR.dia  schema-interactive.html  seed-data.md
docs/: schema-interactive.html  schema.md  seed-data.md
scripts/: ingest.py
src/optcg_api/: _images.py  app.py  database.py  main.py  models.py
src/optcg_api/routers/: __init__.py  _common.py  cards.py  lookups.py  naips.py  sets.py
src/reska_op_card_api/: __init__.py  _images.py  auth.py  cli.py  database.py  main.py  models.py
src/reska_op_card_api/routers/: __init__.py  _common.py  admin.py  cards.py  lookups.py  naips.py  sets.py
tests/: conftest.py  test_admin.py  test_auth.py  test_cards.py  test_lookups.py  test_naips.py  test_sets.py
