[project]
name = "optcg-api"
version = "0.1.0"
description = "API for information of the One Piece TCG"
readme = "README.md"
authors = [{ name = "Ran#" }]
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = ["fastapi>=0.135.2", "uvicorn>=0.42.0"]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.7"]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

[project.scripts]
opapi = "optcg_api.main:main"
