[project]
name = "reska-op-card-api"
version = "0.1.0"
description = "Reska card data API for the One Piece TCG"
readme = "README.md"
authors = [{ name = "Ran#" }]
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "blake3>=1.0.8",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.7"]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
